View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026468 | Open CASCADE | OCCT:Coding | public | 2015-07-22 10:34 | 2015-10-23 20:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026468: Out of range exception on current master | ||||
Description | After integration 26351 the following lines were added: const Standard_Integer aFirstIdx = TheCurveTool::BSpline(aCurve)->FirstUKnotIndex(), aLastIdx = TheCurveTool::BSpline(aCurve)->LastUKnotIndex(); // const reference can not be used due to implementation of BRep_Adaptor. TColStd_Array1OfReal aKnots(aFirstIdx, aLastIdx); TheCurveTool::BSpline(aCurve)->Knots(aKnots); When bspline parameters lies inside the knots space, where will be exception in Knots method: Standard_DimensionError_Raise_if (K.Length() != knots->Length(), "Geom_BSplineCurve::Knots"); K = knots->Array1(); | ||||
Steps To Reproduce | test boolean bsection M8 | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR26468 has been created by aml. SHA-1: ff26a7551fae207a380f10b9c8b0ab1dedcd9f79 Detailed log of new commits: Author: aml Date: Wed Jul 22 10:35:37 2015 +0300 0026468: Out of range exception on current master Problem with different ranges fixed. |
|
Dear msv, Please check branch CR26468. |
|
Branch CR26468 has been updated forcibly by aml. SHA-1: e2f9e136177d92ba41664c02d04e52d74cf449b5 |
|
Reviewed. |
|
Branch CR26468 has been updated by aml. SHA-1: 3351e0af37f1c377eeca62f98dd2a7c1206b42c5 Detailed log of new commits: Author: aml Date: Wed Jul 22 14:45:46 2015 +0300 test cases update. |
|
Branch CR26468 has been deleted by inv. SHA-1: 3351e0af37f1c377eeca62f98dd2a7c1206b42c5 |
occt: master 738d336b 2015-07-22 13:13:46
Committer: bugmaster Details Diff |
0026468: Out of range exception on current master Problem with different ranges fixed. test cases update. |
Affected Issues 0026468 |
|
mod - src/Geom/Geom_BSplineCurve_1.cxx | Diff File | ||
mod - src/Geom2d/Geom2d_BSplineCurve_1.cxx | Diff File | ||
mod - tests/bugs/modalg_5/bug23706_20 | Diff File | ||
mod - tests/bugs/modalg_5/bug23706_21 | Diff File | ||
mod - tests/bugs/modalg_5/bug23706_22 | Diff File | ||
mod - tests/bugs/modalg_5/bug23706_24 | Diff File | ||
mod - tests/bugs/modalg_5/bug23706_53 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-22 10:34 |
|
New Issue | |
2015-07-22 10:34 |
|
Assigned To | => aml |
2015-07-22 10:36 | git | Note Added: 0043278 | |
2015-07-22 10:36 |
|
Note Added: 0043279 | |
2015-07-22 10:36 |
|
Assigned To | aml => msv |
2015-07-22 10:36 |
|
Status | new => resolved |
2015-07-22 11:34 | git | Note Added: 0043282 | |
2015-07-22 11:38 |
|
Note Added: 0043283 | |
2015-07-22 11:38 |
|
Assigned To | msv => bugmaster |
2015-07-22 11:38 |
|
Status | resolved => reviewed |
2015-07-22 14:46 | git | Note Added: 0043291 | |
2015-07-23 11:55 | bugmaster | Changeset attached | => occt master 738d336b |
2015-07-23 11:55 | bugmaster | Status | reviewed => verified |
2015-07-23 11:55 | bugmaster | Resolution | open => fixed |
2015-08-14 10:54 | git | Note Added: 0044170 | |
2015-08-26 10:59 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-09-16 15:23 |
|
Relationship added | related to 0026605 |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |