0026468: Out of range exception on current master

Problem with different ranges fixed.

test cases update.