src/Geom/Geom_BSplineCurve_1.cxx
@@ -389,9 +389,11 @@ GeomAbs_BSplKnotDistribution Geom_BSplineCurve::KnotDistribution () const
 
 void Geom_BSplineCurve::Knots (TColStd_Array1OfReal& K) const
 {
-  Standard_DimensionError_Raise_if
-    (K.Length() != knots->Length(), "Geom_BSplineCurve::Knots");
-  K = knots->Array1();
+  Standard_DomainError_Raise_if (K.Lower() < knots->Lower() ||
+                                 K.Upper() > knots->Upper(),
+                                 "Geom_BSplineCurve::Knots");
+  for(Standard_Integer anIdx = K.Lower(); anIdx <= K.Upper(); anIdx++)
+    K(anIdx) = knots->Value(anIdx);
 }
 
 const TColStd_Array1OfReal& Geom_BSplineCurve::Knots() const
@@ -406,9 +408,11 @@ const TColStd_Array1OfReal& Geom_BSplineCurve::Knots() const
 
 void Geom_BSplineCurve::KnotSequence (TColStd_Array1OfReal& K) const
 {
-  Standard_DimensionError_Raise_if
-    (K.Length() != flatknots->Length(), "Geom_BSplineCurve::KnotSequence");
-  K = flatknots->Array1();
+  Standard_DomainError_Raise_if (K.Lower() < flatknots->Lower() ||
+                                 K.Upper() > flatknots->Upper(),
+                                 "Geom_BSplineCurve::KnotSequence");
+  for(Standard_Integer anIdx = K.Lower(); anIdx <= K.Upper(); anIdx++)
+    K(anIdx) = flatknots->Value(anIdx);
 }
 
 const TColStd_Array1OfReal& Geom_BSplineCurve::KnotSequence() const
